# Adobe-URL-Block-List

./: .gitattributes  .gitignore  PiHole  README.md  apply.bat  apply.sh  dnsmasq  hosts  hosts-beta  lists.py  pihole.txt  pyproject.toml  revert.bat  revert.sh
.github/workflows/: check-dups.yml  test-scripts.yml
tests/: conftest.py  test_setup_validation.py
